refactored form validation

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     </div>
     <form class="new-book-form" action="#">
         <div class="add-form hide">
-            <input type="text" id="input_title" placeholder="Book Title" title="Enter book title">
-            <input type="text" id="input_author" placeholder="Author" title="Enter name of author">
-            <input type="number" id="input_pages" placeholder="Number of pages" title="Must enter a number">
+            <input type="text" id="input_title" placeholder="Book Title" title="Enter book title"required>
+            <input type="text" id="input_author" placeholder="Author" title="Enter name of author" required>
+            <input type="number" id="input_pages" placeholder="Number of pages" title="Must enter a number" required>
             <p class="form-error hide">*Please fill all input fields</p>
             <div class="checkbox-div">
                 <label for="read-box">Finished Reading?</label>
